--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -13,3 +13,14 @@ section {
   max-inline-size: 1440px;
   margin: 0 auto;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: $gray12;
+  font-weight: 600;
+  letter-spacing: -2px;
+  line-height: 40px;
+}
