--- a/components/modules/PokemonList/PokemonList.module.scss
+++ b/components/modules/PokemonList/PokemonList.module.scss
@@ -1,17 +1,7 @@
 .grid {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  display: flex;
+  flex-wrap: wrap;
   gap: 32px;
   margin-bottom: 32px;
-
-  @include s {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  @include m {
-    grid-template-columns: repeat(3, 1fr);
-    padding-inline: 48px;
-    gap: 64px;
-    margin-bottom: 64px;
-  }
+  justify-content: center;
 }
